--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
 
       - image: circleci/mysql:5
 
-    parallelism: 3
+    parallelism: 2
 
     steps:
       - run:
@@ -106,7 +106,7 @@ jobs:
 
       - image: circleci/mysql:5
 
-    parallelism: 1
+    parallelism: 2
 
     steps:
       - run:
@@ -247,6 +247,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   debian9_test:
     docker:
@@ -269,6 +272,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   kali_test:
     docker:
@@ -291,6 +297,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   ubuntu14_test:
     docker:
@@ -315,6 +324,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   ubuntu16_test:
     docker:
@@ -337,6 +349,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   ubuntu17_test:
     docker:
@@ -361,6 +376,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   ubuntu18_test:
     docker:
@@ -385,6 +403,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   debian_ok:
     docker:
@@ -449,88 +470,6 @@ jobs:
             package_cloud push seccubus/releases/ubuntu/artful build/*.deb
             package_cloud push seccubus/releases/ubuntu/bionic build/*.deb
 
-  build_fc26:
-    docker:
-      - image: fedora:26
-    steps:
-      - run: dnf install -y git
-      - checkout
-      - run:
-          name: Generate build signature
-          command: echo $CIRCLE_SHA1 > .git-describe
-      - run:
-          name: Install prerequisite packages
-          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign make
-      - run:
-          name: Build
-          command: rpm/makerpm.sh
-      - save_cache:
-          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
-          paths:
-            - "/root/project/build"
-      - store_artifacts:
-          path: /root/project/build/
-
-  test_fc26:
-    docker:
-      - image: fedora:26
-    steps:
-      - run:
-          name: Generate build signature
-          command: echo $CIRCLE_SHA1 > .git-describe
-      - restore_cache:
-          key: rpm-fc26-{{ .Branch }}-{{ checksum ".git-describe" }}
-      - run:
-          name: Install rpm
-          command: dnf install -y build/*fc26*rpm
-      - run:
-          name: Start hypnotoad
-          command: cd /opt/seccubus; PERL5LIB=$PERL5LIB:. hypnotoad seccubus.pl
-      - run:
-          name: Seccubus should be running on port 8443
-          command: echo -n >/dev/tcp/localhost/8443
-
-  build_fc27:
-    docker:
-      - image: fedora:27
-    steps:
-      - run: dnf install -y git
-      - checkout
-      - run:
-          name: Generate build signature
-          command: echo $CIRCLE_SHA1 > .git-describe
-      - run:
-          name: Install prerequisite packages
-          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign make
-      - run:
-          name: Build
-          command: rpm/makerpm.sh
-      - save_cache:
-          key: rpm-fc27-{{ .Branch }}-{{ checksum ".git-describe" }}
-          paths:
-            - "/root/project/build"
-      - store_artifacts:
-          path: /root/project/build/
-
-  test_fc27:
-    docker:
-      - image: fedora:27
-    steps:
-      - run:
-          name: Generate build signature
-          command: echo $CIRCLE_SHA1 > .git-describe
-      - restore_cache:
-          key: rpm-fc27-{{ .Branch }}-{{ checksum ".git-describe" }}
-      - run:
-          name: Install rpm
-          command: dnf install -y build/*fc27*rpm
-      - run:
-          name: Start hypnotoad
-          command: cd /opt/seccubus; PERL5LIB=$PERL5LIB:. hypnotoad seccubus.pl
-      - run:
-          name: Seccubus should be running on port 8443
-          command: echo -n >/dev/tcp/localhost/8443
-
   build_fc28:
     docker:
       - image: fedora:28
@@ -571,6 +510,53 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
+
+  build_fc29:
+    docker:
+      - image: fedora:29
+    steps:
+      - run: dnf install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Install prerequisite packages
+          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign make
+      - run:
+          name: Build
+          command: rpm/makerpm.sh
+      - save_cache:
+          key: rpm-fc29-{{ .Branch }}-{{ checksum ".git-describe" }}
+          paths:
+            - "/root/project/build"
+      - store_artifacts:
+          path: /root/project/build/
+
+  test_fc29:
+    docker:
+      - image: fedora:29
+    steps:
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-fc29-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name: Install rpm
+          command: dnf install -y build/*fc29*rpm
+      - run:
+          name: Start hypnotoad
+          command: cd /opt/seccubus; PERL5LIB=$PERL5LIB:. hypnotoad seccubus.pl
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   build_el7:
     docker:
@@ -615,6 +601,9 @@ jobs:
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
+      - run:
+          name: Seccubus should answer to call to api/appstatus
+          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
 
   el_ok:
     docker:
@@ -872,38 +861,7 @@ workflows:
                 - master
                 - releases
                 - rpm-build
-      - build_fc26:
-          filters:
-            branches:
-              only:
-                - master
-                - releases
-                - rpm-build
-      - test_fc26:
-          requires:
-            - build_fc26
-          filters:
-            branches:
-              only:
-                - master
-                - releases
-                - rpm-build
-      - build_fc27:
-          filters:
-            branches:
-              only:
-                - master
-                - releases
-                - rpm-build
-      - test_fc27:
-          requires:
-            - build_fc27
-          filters:
-            branches:
-              only:
-                - master
-                - releases
-                - rpm-build
+
       - build_fc28:
           filters:
             branches:
@@ -920,12 +878,27 @@ workflows:
                 - master
                 - releases
                 - rpm-build
+      - build_fc29:
+          filters:
+            branches:
+              only:
+                - master
+                - releases
+                - rpm-build
+      - test_fc29:
+          requires:
+            - build_fc29
+          filters:
+            branches:
+              only:
+                - master
+                - releases
+                - rpm-build
       - el_ok:
           requires:
             - test_el7
-            - test_fc26
-            - test_fc27
             - test_fc28
+            - test_fc29
           filters:
             branches:
               only:
