--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -256,7 +256,7 @@ jobs:
       - image: debian:9
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -281,7 +281,7 @@ jobs:
       - image: kalilinux/kali-linux-docker:latest
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -308,7 +308,7 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -333,7 +333,7 @@ jobs:
       - image: ubuntu:16.04
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -360,7 +360,7 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
@@ -387,7 +387,7 @@ jobs:
     steps:
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
       - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates curl
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
