--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -578,7 +578,7 @@ jobs:
           command: echo -n >/dev/tcp/localhost/8443
       - run:
           name: Seccubus should answer to call to api/appstatus
-          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
+          command: curl --connect-timeout 10 https://127.0.0.1:8443/api/appstatus -k
 
   build_fc29:
     docker:
@@ -622,7 +622,7 @@ jobs:
           command: echo -n >/dev/tcp/localhost/8443
       - run:
           name: Seccubus should answer to call to api/appstatus
-          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
+          command: curl --connect-timeout 10 https://127.0.0.1:8443/api/appstatus -k
 
   build_el7:
     docker:
@@ -669,7 +669,7 @@ jobs:
           command: echo -n >/dev/tcp/localhost/8443
       - run:
           name: Seccubus should answer to call to api/appstatus
-          command: curl --connect-timeout 10 http://127.0.0.1:8443/api/appstatus
+          command: curl --connect-timeout 10 https://127.0.0.1:8443/api/appstatus -k
 
   el_ok:
     docker:
