Fixing CircleCI config too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             export LC_ALL=C.UTF-8 ;
             export LANG=en_US.UTF-8 ;
             export LANGUAGE=en_US.UTF-8 ;
-            bundle exec jekyll serve --incremental --host=0.0.0.0
+            bundle exec jekyll build
 
 workflows:
   version: 2
