--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     docker:
       - image: ruby:latest
     steps:
+      - run: apt-get update && apt-get isntall ssh git
+      - checkout
       - run:
           name: Setup locales
           command: |
